# imageproxy

./: README.md  pom.xml
bittorrent_jni/: configure.ac
bittorrent_jni/cli/: Makefile.am  orca_imageproxy_BTDownload.h  seeding.c
image-proxy/tags/0.1/bittorrent_jni/: Makefile.am  clean_build.sh  prep_build.sh
image-proxy/tags/0.1/bittorrent_jni/cli/: orca_imageproxy_BTDownload.h
image-proxy/tags/0.1/src/main/java/orca/imageproxy/: Entry.java  Pair.java  PropertyLoader.java  RegistrationScript.java  SqliteBase.java  SqliteDLDatabase.java  SqliteDatabase.java
image-proxy/tags/0.1/src/main/java/orca/imageproxy/client/: ExceptionException.java  IMAGEPROXYStub.java
image-proxy/tags/0.2/bittorrent_jni/: README  transmission_find_port.patch
image-proxy/tags/0.2/bittorrent_jni/cli/: client.c
image-proxy/tags/0.2/scripts/: register.sh  run.sh
image-proxy/tags/0.2/src/main/java/orca/imageproxy/: BTDownload.java  SqliteBase.java
image-proxy/tags/0.2/src/main/java/orca/imageproxy/client/: IMAGEPROXYCallbackHandler.java
image-proxy/tags/0.2/src/main/resources/orca/imageproxy/: imageproxy-settings.properties
image-proxy/trunk/bittorrent_jni/: prep_build.sh  transmission_shared_lib.patch
image-proxy/trunk/bittorrent_jni/cli/: Makefile.am  client.c  orca_imageproxy_BTDownload.h
image-proxy/trunk/scripts/: deregister.sh  nova_register.sh  register.sh
image-proxy/trunk/src/main/java/orca/imageproxy/: ActiveDownloadMap.java  BTDownload.java  DeregistrationScript.java  DownloadRegister.java  Entry.java  Globals.java  PropertyLoader.java  RegistrationScript.java  SqliteBase.java  SqliteDLDatabase.java  SqliteDatabase.java  Util.java
image-proxy/trunk/src/main/java/orca/imageproxy/client/: ExceptionException.java  IMAGEPROXYCallbackHandler.java  IMAGEPROXYStub.java  imageproxyclient.java
image-proxy/trunk/src/main/resources/orca/imageproxy/: imageproxy-settings.properties
imagecleanup/: Readme.md  environment  image_proxy.py  imgdiskspace
imagecleanup/etc/: diskspace.conf
imagecleanup/share/diskspace/: imageproxy
scripts/: deregister.sh  euca_register.sh  imageproxy.service  nova_deregister.sh  nova_register.sh  register.sh  start_imgproxy.sh  stop_imgproxy.sh
src/main/java/orca/imageproxy/: BTDownload.java  DeregistrationScript.java  DownloadRegister.java  Globals.java  RegistrationScript.java  SqliteDLDatabase.java  SqliteDatabase.java  Util.java
src/main/java/orca/imageproxy/client/: IMAGEPROXYStub.java  imageproxyclient.java
src/main/resources/orca/imageproxy/: imageproxy-settings.properties
